--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -28,10 +28,10 @@
                         <div style="width: 60%;">
                             <p class="m-0" t-field="doc.user_id"/>
                             <p class="m-0" t-if="doc.user_id.partner_id.email">
-                                <i class="fas fa-envelope"></i><span t-field="doc.user_id.partner_id.email"/>
+                                <span class="fas fa-envelope"/><span t-field="doc.user_id.partner_id.email"/>
                             </p>
                             <p class="m-0" t-if="doc.user_id.partner_id.mobile">
-                                <i class="fas fa-phone-alt"></i><span t-field="doc.user_id.partner_id.mobile"/>
+                                <span class="fas fa-mobile"/><span t-field="doc.user_id.partner_id.mobile"/>
                             </p>
                         </div>
                     </div>
