--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -49,7 +49,7 @@
                             <p class="m-0" t-field="doc.confirmation_date"/>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" t-if="doc.date_order and doc.state in ['draft','sent']">
                         <div style="width: 40%;" t-if="doc.validity_date and doc.state in ['draft', 'sent']" >
                             <strong>Expiry Date:</strong>                
                         </div>
